Fix navigation buttons on desktop & style navigation on mobile(only for landing page)

--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,19 +1,3 @@
-/* header {
-  position: absolute;
-  top: 0;
-  margin: 0;
-  padding: 0;
-} */
-
-/* .login {
-  margin: 30px auto;
-  width: 380px;
-  position: relative;
-  top: 100px;
-  padding-bottom: 60px;
-  height: 100vh;
-} */
-
 .login-container .loginx {
   width: 380px;
   position: relative;
