--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -37,16 +37,49 @@ body.loaderx {
 	padding: 0px;
 }
 
-.cf .login {
+.navbar-toggler {
 	position: absolute;
-	left: -9px;
+	top: 0.5em;
+	z-index: 2000;
+}
+
+#showcase .cf .login {
+	position: absolute;
+	left: 60%;
 	width: 180px;
 }
 
-.cf .register {
+
+#showcase .cf .register {
+	position: absolute;
+	left: 80%;
+	width: 180px;
+}
+
+
+#showcase .cf .login:hover,
+.register:hover {
+	color: #c9c505;
+}
+
+#showcase .cf .register {
 	position: absolute;
 	width: 180px;
 	left: 80%;
+
+}
+
+.register {
+	position: absolute;
+	width: 180px;
+	left: 80%;
+}
+
+.login {
+	position: absolute;
+	left: 70%;
+	width: 180px;
+
 }
 
 .cf .logout {
@@ -157,29 +190,19 @@ a {
 	top: 0;
 }
 
-/* .cf ul li a {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
-  width: 100%;
-} */
+.cf ul li a {
+	margin: 0 1em;
+}
 
 .cf li a:hover {
 	background-color: #444;
 	opacity: 1;
+	color: #c9c505 !important;
+	/* width: 150px; */
 }
 
-.cf .nav-item a {
-	display: flex;
-	flex-direction: row;
-	width: 180px;
-	font-size: 1em;
-	align-items: center;
-	text-align: center;
-}
 
-.cf .logoTitle {
+*/ .cf .logoTitle {
 	position: relative;
 	top: 5px;
 	float: left;
@@ -508,29 +531,6 @@ nav li {
 	left: 0em;
 }
 
-.cf li:nth-child(2) {
-	position: absolute;
-	float: right;
-	left: 63%;
-}
-
-/* .cf li .third {
-  position: absolute;
-  float: right;
-  left: -120px;
-} */
-
-/* .cf li:nth-child(3) {
-  position: absolute;
-  float: right;
-  left: 55%;
-}
-
-.cf li:nth-child(4) {
-  position: absolute;
-  float: right;
-  left: 83%;
-} */
 
 nav a {
 	display: inline-block;
@@ -556,7 +556,7 @@ nav a#openup {
 }
 
 .cf li a:hover,
-.cf .nav-link {
+.cf .nav-link:hover {
 	color: #c9c505;
 	text-decoration: none;
 	width: 190px !important;
@@ -866,7 +866,7 @@ a {
 	outline: none !important;
 }
 
-.user-list tbody td > img {
+.user-list tbody td>img {
 	position: relative;
 	max-width: 50px;
 	width: 50px;
@@ -1003,8 +1003,7 @@ a {
 	margin-bottom: 7em;
 }
 
-.addRevForm .form-comments .review {
-}
+.addRevForm .form-comments .review {}
 
 .disRev {
 	margin-top: 6px;
@@ -1123,10 +1122,23 @@ label {
 	#showcase p.lead {
 		display: none;
 	}
+
+	.lead {
+		display: none;
+	}
 }
 
 /* @media only screen and (min-width: 420px) and (max-width: 600px) { */
 @media only screen and (min-width: 481px) and (max-width: 600px) and (orientation: portrait) {
+	.lead {
+		display: none;
+	}
+
+	.fixed-top {
+		height: 3.5em;
+	}
+
+
 	.gift-cards {
 		grid-template-columns: 1fr;
 	}
@@ -1144,14 +1156,43 @@ label {
 		position: relative;
 	}
 
+	.navbar-collapse.show {
+		height: 100vh;
+		background-color: #333;
+		width: 100%;
+		top: 2em;
+		left: 0em;
+		color: #fff;
+		position: absolute;
+	}
+
+	.navbar-collapse.show .cf {
+		position: relative;
+		left: 120px;
+	}
+
+	.navbar-collpase.show .cf li a {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+
+	/* .navbar-collapse.show .logoTitle {
+		font-size: 1em;
+	} */
+
+	.navbar-collpase.show .cf li a:hover {
+		color: #c9c505;
+	}
+
 	#showcase ul {
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		text-align: center;
 		padding: 0;
-		margin: 0 -90px;
-		/* height: 30px; */
+		/* margin: 0 -90px; */
+		height: 100%;
 		width: 100%;
 	}
 
@@ -1186,27 +1227,29 @@ label {
 		height: auto;
 	}
 
-	nav a {
-		text-align: left;
+	#nav ul li a {
+		text-align: center;
 		width: 100%;
-		text-indent: 15px;
+		text-indent: 40px;
+		font-size: 1.4em;
 		background: #333;
-		border-bottom: 1px solid #555;
+		border-bottom: 3px solid #c9c505;
 	}
 
-	nav a:hover {
+	#nav ul li a:hover {
 		background: #444;
 		width: 100%;
 	}
 
 	#showcase .logoTitle {
-		color: white;
 		position: relative;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		top: 15px;
-		float: left;
+		top: -215px;
+		left: 3em;
+		text-indent: 34px;
+	}
+
+	.navbar-nav .nav-link:hover {
+		color: #c9c505 !important;
 	}
 
 	#showcase header {
@@ -1219,84 +1262,30 @@ label {
 		align-items: center;
 	}
 
-	.cf .nav-item {
-		position: relative;
-		display: flex;
-		flex-direction: row;
-		justify-content: space-around;
-		float: right;
-		width: 180px;
-		font-size: 0.7rem;
-		text-align: center;
-		align-content: center;
-	}
-
 	.cf ul {
 		width: 100%;
 		display: flex;
-		height: 10vh;
-		flex-direction: row;
+		flex-direction: column;
 		justify-content: center;
 	}
 
-	nav a#openup {
-		display: block;
-		background-color: #333;
-		width: 100%;
-		position: relative;
-		height: 0vh;
-		color: white;
-	}
-
-	nav ul {
-		display: none;
-		height: auto;
-	}
-
-	nav li {
-		width: 100%;
-		float: left;
-		position: relative;
-		list-style: none;
-	}
-
-	nav a {
-		text-align: left;
-		width: 100%;
-		text-indent: 25px;
-		background: #333;
-		border-bottom: 1px solid #555;
-	}
-
-	nav a:hover {
-		background: #444;
-	}
-
-	nav a#openup {
-		display: inline-block;
-		background-color: #333;
-		width: 100%;
-		position: relative;
-	}
-
-	.nav-link {
-		border-bottom: none;
-	}
-
-	nav a#openup:after {
-		content: '|||';
-		transform: rotate(-90deg);
-		-ms-transform: rotate(-90deg);
-		/* IE 9 */
-		-webkit-transform: rotate(-90deg);
-		/* Safari and Chrome */
-		width: 30px;
-		height: 10px;
-		display: inline-block;
+	.navbar-collapse.show .cf li {
+		padding: 0;
+		width: 180px;
+		top: 350px;
+		font-size: 1em;
+		align-items: center;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
 		position: absolute;
-		left: 150px;
-		top: 25px;
 	}
+
+	.navbar-collapse.show .cf li:hover {
+		color: #c9c505;
+	}
+
+
 
 	#form {
 		width: 100%;
@@ -1326,7 +1315,12 @@ label {
 
 	#music {
 		position: relative;
-		top: 30px;
+		top: -170px;
+	}
+
+	footer {
+		position: relative;
+		top: -160px;
 	}
 
 	.form-group {
@@ -1476,7 +1470,6 @@ label {
 		flex-direction: column;
 		justify-content: center;
 		width: 100%;
-		/* background-color: red; */
 		height: 600px;
 		padding: 10px;
 	}
@@ -1485,112 +1478,3 @@ label {
 		width: 80%;
 	}
 }
-
-/* @media screen and (min-width: 480px) and (max-width: 541px) {
-   body {
-    height: 40vh;
-  }
-
-  nav #openup:after {
-    content: '|||';
-    transform: rotate(-90deg);
-    -ms-transform: rotate(-90deg);
-    -webkit-transform: rotate(-90deg);
-    width: 30px;
-    height: 30px;
-    display: block;
-    position: absolute;
-    right: 16px;
-    top: 25px;
-    font-weight: bold;
-    font-size: 22px;
-
-  }
-
-  .section {
-    position: relative;
-    padding: 2rem 0;
-    top: 100px;
-  }
-
-  .section-main h1 {
-    position: relative;
-    top: -20px;
-  }
-
-  .section-main  h2, p {
-    display: none;
-  }
-
-  #showcase {
-    height: 50vh;
-  }
-
-  #showcase .container {
-    margin-top: 15vh;
-  }
-
-  #showcase h1 {
-    font-size: 3rem;
-  }
-
-  #showcase h2 {
-    font-size: 1.5rem;
-  }
-
-  nav {
-    height: auto;
-    border-bottom: 0;
-  }
-
-  nav ul {
-    display: none;
-    height: auto;
-  }
-
-  nav li {
-    width: 100%;
-    float: left;
-    position: relative;
-    list-style: none;
-  }
-
-  nav a {
-    text-align: left;
-    width: 100%;
-    text-indent: 25px;
-    background: #333;
-    border-bottom: 1px solid #555;
-  }
-
-  nav a:hover {
-    background: #444;
-  }
-
-  nav a#openup {
-    display: inline-block;
-    background-color: #333;
-    width: 100%;
-    position: relative;
-  }
-
-  .nav-link {
-    border-bottom: none;
-  }
-
-  .form-group {
-    position: relative;
-    top: -200px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    /* background-color: red; 
-    height: 600px;
-    padding: 10px;
-  }
-
-  #form {
-    width: 80%;
-  }
-}  */
